--- a/Lab-3/Lab3.ipynb
+++ b/Lab-3/Lab3.ipynb
@@ -401,7 +401,7 @@
     }
    ],
    "source": [
-    "#gathering and prepa\n",
+    "#gathering and preparing data\n",
     "import pandas as pd\n",
     "df = pd.read_excel('ml-data.xlsx')\n",
     "df"
